test/arrays/compilerErrors/array-generic-type.good
array-generic-type.chpl:4: error: generic array types are unsupported in this context
array-generic-type.chpl:8: error: generic array types are unsupported in this context
